oxiplate/tests/crates/config-with-feature-turned-off/tests/broken/feature-turned-off.stderr
error: `/oxiplate.toml` exists, but the "config" feature is turned off. Either delete/rename `/oxiplate.toml`, or turn the "config" feature on.
 --> tests/broken/feature-turned-off.rs:4:1
  |
4 | / #[oxiplate_inline(html: "{{ message }}")]
5 | | struct Data<'a> {
6 | |     message: &'a str,
7 | | }
  | |_^

error[E0599]: no method named `render` found for struct `Data` in the current scope
  --> tests/broken/feature-turned-off.rs:14:21
   |
 5 | struct Data<'a> {
   | --------------- method `render` not found for this struct
...
14 |     assert_eq!(data.render().unwrap(), "Hello world!");
   |                     ^^^^^^ method not found in `Data<'_>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `render`, perhaps you need to implement it:
           candidate #1: `Render`
